# OperationsResearch2

./: .gitignore  CMakeLists.txt  Homework02  README.md  tsp
Homework01/: CMakeLists.txt
Homework01/include/: chrono.h  parsers.h  tsp.h  tsp_utilities.h
Homework01/src/: chrono.c  main.c  parsers.c  tsp.c  tsp_utilities.c
Homework02/: CMakeLists.txt
Homework02/include/: chrono.h  heuristics.h  parsers.h  tsp_utilities.h
Homework02/src/: heuristics.c  main.c  parsers.c  tsp_utilities.c
RO2_Cplex_TEMPLATE_2020/: chrono.c  main.c  vrp.c  vrp.h
files/: att48.tsp.txt  test.bat  test.tsp.txt
include/: cplex_utilities.h  csv_parser.h  heuristics.h  matheuristics.h  mincut.h  parsers.h  tsp_utilities.h  utils.h
results/: results.csv  results_B.csv  results_C.csv  results_C_DEPTH.csv  results_G.csv  results_GAlow.csv  results_H.csv  results_H_0.csv  results_H_100.csv  results_H_1000.csv  results_H_old.csv  results_L_20000.csv  results_L_5000.csv  results_L_7000.csv  results_L_9000.csv  results_L_best.csv  results_L_depth.csv  results_P.csv  results_Pold.csv  results_T.csv  results_V.csv  results_eur.csv  results_exact.csv  results_heuristic.csv  results_heuristics.csv  results_math.csv  results_test.csv
src/: cplex_utilities.c  csv_parser.c  heuristics.c  main.c  matheuristics.c  mincut.c  parsers.c  tsp_utilities.c  utils.c
test/: CMakeLists.txt
test/src/: main.c
utils/: perfprof.py  read_me.txt  script.py
